--- a/src/components/inspectors/inspector.scss
+++ b/src/components/inspectors/inspector.scss
@@ -1,4 +1,5 @@
 $inspector-column-max-width: 265px;
+$toolbar-height: 4rem;
 
 .inspector-column {
   max-width: $inspector-column-max-width;
@@ -10,6 +11,7 @@ $inspector-column-max-width: 265px;
   &-container {
     text-align: left;
     user-select: none;
+    padding-bottom: $toolbar-height;
 
     .form-group {
       padding: 0 0.5rem;
